Fixed navbar collapsed toggle

--- a/src/experiment/css/style.less
+++ b/src/experiment/css/style.less
@@ -1,5 +1,6 @@
 @blue-shade: #4FC1E9;
 @first-color: #f3f4f7;
+@second-blue: #4A89DC;
 
 body {
 	background: white;
@@ -21,6 +22,15 @@ body {
 		.rm-activated-nav-link {
 			background: @blue-shade;
 			color: white !important;
+		}
+
+		.rm-toggle {
+			background: @second-blue;
+			border-color: @second-blue;
+
+			.rm-icon-bar {
+				background: @blue-shade;
+			}
 		}
 	}
 
